# Matrix

./: .gitignore
20230111-0_SGD_to_descent_loss/: main.cpp
20230112-1_success_std_SGD/: main.cpp
20230112-3-optimizer/: CMakeLists.txt  main.cpp
20230112-3-optimizer/include/: DEFINES.h  DynamicElementWiseSegment.h
simple-test/: CMakeLists.txt  dataset.hpp  main.cpp
simple-test/include/: LineaerRegression.hpp  Matrix.hpp  MemoryPool.hpp
simple-test/include/Eigen/: LU
simple-test/include/Eigen/src/Cholesky/: LDLT.h
simple-test/include/Eigen/src/Core/: ConditionEstimator.h  Inverse.h  PermutationMatrix.h  Transpositions.h  TriangularMatrix.h
simple-test/include/Eigen/src/Core/functors/: UnaryFunctors.h
simple-test/include/Eigen/src/Eigenvalues/: HessenbergDecomposition.h  RealQZ.h  RealSchur.h  SelfAdjointEigenSolver.h
simple-test/include/Eigen/src/Geometry/: AngleAxis.h  EulerAngles.h  Quaternion.h  Rotation2D.h  RotationBase.h  Scaling.h  Transform.h  Translation.h
simple-test/include/Eigen/src/Householder/: HouseholderSequence.h
simple-test/include/Eigen/src/IterativeLinearSolvers/: BasicPreconditioners.h  IncompleteCholesky.h  IncompleteLUT.h
simple-test/include/Eigen/src/LU/: FullPivLU.h  InverseImpl.h  PartialPivLU.h
simple-test/include/Eigen/src/LU/arch/: InverseSize4.h
simple-test/include/Eigen/src/QR/: ColPivHouseholderQR.h  CompleteOrthogonalDecomposition.h  FullPivHouseholderQR.h
simple-test/include/Eigen/src/SVD/: SVDBase.h
simple-test/include/Eigen/src/SparseCholesky/: SimplicialCholesky.h
simple-test/include/Eigen/src/SparseCore/: SparsePermutation.h  SparseTriangularView.h
simple-test/include/Eigen/src/SparseLU/: SparseLU.h  SparseLU_heap_relax_snode.h
simple-test/include/Eigen/src/plugins/: ArrayCwiseUnaryOps.h  MatrixCwiseUnaryOps.h
(+21 files in other folders)
